k8s-controller_public_ip.tf
resource "azurerm_public_ip" "k8s-controller-ip" {
    name                         = "k8s-controller-ip"
    location                     = "eastus"
    resource_group_name          = "${azurerm_resource_group.myterraformgroup.name}"
    public_ip_address_allocation = "dynamic"

    tags {
        environment = "Terraform Demo"
    }
}
